# probability

./: .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  Database_Analysis_changepoint.ipynb  LICENSE  MANIFEST.in  PRNGS.md  README  README.md  STYLE_GUIDE.md  SUBSTRATES.md  UNITTEST.md  WORKSPACE  bazel.rc  conftest.py  pip_pkg.py  pip_pkg.sh  required_packages.py  setup.py
spinoffs/fun_mc/: README.md  pyproject.toml
spinoffs/fun_mc/fun_mc/: BUILD  api.py  backend.py  fun_mc_lib.py  fun_mc_test.py  malt.py  malt_test.py  prefab.py  prefab_test.py  sga_hmc.py  sga_hmc_test.py  smc.py  smc_test.py  test_util.py  types.py  using_jax.py  using_tensorflow.py  util.py  util_tfp.py  util_tfp_test.py
spinoffs/fun_mc/fun_mc/backends/: BUILD  __init__.py  jax_integration_test.py  rewrite.py  tensorflow_integration_test.py
spinoffs/fun_mc/fun_mc/dynamic/backend_jax/: BUILD  backend.py  tf_on_jax.py  util.py
spinoffs/fun_mc/fun_mc/dynamic/backend_tensorflow/: BUILD  backend.py  util.py
spinoffs/oryx/: README.md  WORKSPACE  pyproject.toml  setup.py
spinoffs/oryx/examples/: _book.yaml  _index.yaml  _toc.yaml
spinoffs/oryx/examples/notebooks/: a_tour_of_oryx.ipynb  probabilistic_programming.ipynb
spinoffs/oryx/oryx/: BUILD  __init__.py  version.py
spinoffs/oryx/oryx/bijectors/: BUILD  __init__.py  bijector_extensions.py  bijector_extensions_test.py
spinoffs/oryx/oryx/core/: BUILD  __init__.py  kwargs_util.py  kwargs_util_test.py  primitive.py  pytree.py  serialize.py  serialize_test.py  trace_util.py
spinoffs/oryx/oryx/core/interpreters/: BUILD  __init__.py  harvest.py  harvest_test.py  inverse.py  inverse_test.py  log_prob.py  log_prob_test.py  propagate.py  propagate_test.py  unzip.py  unzip_test.py
spinoffs/oryx/oryx/core/ppl/: BUILD  __init__.py  effect_handler.py  effect_handler_test.py  plate_util.py  transformations.py  transformations_test.py
spinoffs/oryx/oryx/core/state/: BUILD  __init__.py  api.py  function.py  function_test.py  module.py  registrations.py  registrations_test.py
spinoffs/oryx/oryx/distributions/: BUILD  __init__.py  distribution_extensions.py  distribution_extensions_test.py
spinoffs/oryx/oryx/experimental/: BUILD  __init__.py
spinoffs/oryx/oryx/experimental/autoconj/: BUILD  addn.py  addn_test.py  canonicalize.py  canonicalize_test.py  einsum.py  einsum_test.py
spinoffs/oryx/oryx/experimental/matching/: BUILD  __init__.py  jax_rewrite.py  jax_rewrite_test.py  matcher.py  matcher_test.py  rules.py  rules_test.py
spinoffs/oryx/oryx/experimental/mcmc/: BUILD  __init__.py  kernels.py  kernels_test.py  utils.py
spinoffs/oryx/oryx/experimental/nn/: BUILD  __init__.py  base.py  base_test.py  combinator.py  combinator_test.py  convolution.py  convolution_test.py  core.py  core_test.py  function.py  function_test.py  normalization.py  normalization_test.py  (+4 more)
spinoffs/oryx/oryx/internal/: BUILD  __init__.py  test_util.py
spinoffs/oryx/oryx/tools/: BUILD  build_oryx_docs.py
spinoffs/oryx/oryx/util/: BUILD  __init__.py  math.py  summary.py  summary_test.py
(+3071 files in other folders)
