# Copyright 2021 The TensorFlow Probability Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================
[tool.poetry]
name = "oryx"
version = "0.2.0"
description = "Probabilistic programming and deep learning in JAX"
authors = ["Google LLC"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
jax = "0.2.16"
jaxlib = "0.1.68"
dataclasses = { version = "*", python = "<3.7" }
tfp-nightly = {extras = ["jax"], version = "0.14.0-alpha.20210623"}


[tool.poetry.dev-dependencies]
inference-gym = "^0.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
